# Logic

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md  build.py  install.sh
inc/: Exceptions.hpp  Utils.hpp
inc/app/: Modes.hpp
inc/core/: BooleanFunction.hpp  BooleanFunctionParser.hpp  Exceptions.hpp  Operators.hpp  TruthTable.hpp  TruthTableTypes.hpp  Utils.hpp
inc/core/operators/: BinaryOperator.hpp  UnaryOperator.hpp
inc/lang/: Command.hpp  DispatchTable.hpp  Exceptions.hpp  Interpreter.hpp  Runtime.hpp
src/: Main.cpp  Utils.cpp  main.cpp
src/app/: Modes.cpp
src/core/: BooleanFunction.cpp  BooleanFunctionParser.cpp  Operators.cpp  TruthTable.cpp  TruthTableTypes.cpp  Utils.cpp
src/lang/: Command.cpp  DispatchTable.cpp  Interpreter.cpp  Runtime.cpp
test/: runner.cpp
test/core/: BooleanFunctionParserTests.cpp  BooleanFunctionTests.cpp  OperatorsTests.cpp  TruthTableTests.cpp  TruthTableTypesTests.cpp
